Tag provided models with type to catch misconfiguration